# lywsd03mmc-plotly-graph

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
lywsd03mmc_plotly_graph/: __init__.py
lywsd03mmc_plotly_graph/templates/: plotly_graph_lywsd03mmc_settings.jinja2
octoprint_lywsd03mmc/: __init__.py
octoprint_lywsd03mmc/templates/: lywsd03mmc_settings.jinja2
octoprint_lywsd03mmc_plotly_graph/: __init__.py
octoprint_lywsd03mmc_plugin_for_plotly_temp_graph/: __init__.py
octoprint_lywsd03mmc_plugin_for_plotly_temp_graph/templates/: lywsd03mmc_plugin_for_plotly_temp_graph_settings.jinja2
octoprint_plotly_graph_lywsd03mmc/: __init__.py
octoprint_plotly_graph_lywsd03mmc/templates/: plotly_graph_lywsd03mmc_settings.jinja2
octoprint_plotly_temp_graph_lywsd03mmc/: __init__.py
octoprint_plotly_temp_graph_lywsd03mmc/templates/: plotly_temp_graph_lywsd03mmc_settings.jinja2
