[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-LYWSD03MMC-Plotly-Graph"
version = "0.1.0"
description = "Plugin to add LYWSD03MMC temperature and humidity sensor data to PlotlyTempGraph"
authors = [
    {name = "yutaka551", email = "yutaka551butaman@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = [
    "lywsd03mmc>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/yutaka551/plotly-temp-graph-lywsd03mmc"

[project.entry-points."octoprint.plugin"]
plotly_temp_graph_lywsd03mmc = "octoprint_plotly_temp_graph_lywsd03mmc"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_plotly_temp_graph_lywsd03mmc",
    "octoprint_plotly_temp_graph_lywsd03mmc.*"
]
